 * Modify -v to -V on oggenc and oggdec for consistency (#1112)
 * Fix for utf8_decode in Windows; improves behavior in vorbiscomment (#268)
 * ogg123: backported fix from libfishsound to patch the Speex decoder (#1347)
 * ogg123: fixed CPU issue when outputting to a closed pipe (#1357)
 * ogg123: return value to stop decoding after buffer is shut down (#1357)
 * ogg123: support for ReplayGain (#381)
 * oggdec: gettextized help text (#1385)
 * oggdec: gettextized all strings
 * oggdec: call ov_open_callbacks instead of ov_open; it works on Windows now
 * oggenc: fixed a core dump while resampling from FLAC (#1316)
 * oggenc: fixed a typo in the Skeleton handling routine
 * oggenc: fixed remapping channels bug (#1326)
 * oggenc: support for WAVE_FORMAT_EXTENSIBLE headers (#1326)
 * oggenc: support for 32 bit Wave files (#1326)
 * oggenc: --ignorelength; support for Wave files > 4 GB (#1326)
 * oggenc: split help text into manageable chunks to help translators (#1385)
 * oggenc: --utf8 command similar to vorbiscomment's --raw (#268)
 * oggenc: fixed the encoding of extended characters in Windows (#268)
 * oggenc: validate raw UTF-8 sent to oggenc (#268)
 * ogginfo: support for information in Kate streams (#1360)
 * vcut: 64 bit fixes (#1366)
 * vorbiscomment: correct memory allocation (#472)
 * vorbiscomment: validate raw UTF-8 sent to vorbiscomment (#268)

vorbis-tools 1.2.0 -- 2008-02-21

 * FLAC support now relies solely on libFLAC
 * Support for large files (#879)
 * Fixed acinclude.m4 to properly support --no switches
 * ogg123: added remote control support (#1109)
 * ogg123: fixed a bug in esd when pressing CTRL + C (#715)
 * ogg123: fixed a type mismatch in option parsing for 64 bit systems
 * ogg123: configuration no longer hardcoded to /etc
 * ogg123: compiles with older versions of libcurl
 * ogg123: fixed crash when playing 1-channel FLAC (#535)
 * ogg123: fixed floating-point exception when playing corrupt FLAC (#1119)