@@ -11,7 +11,7 @@ vorbis-tools 1.3.0 -- Unreleased
  * ogg123: backported fix from libfishsound to patch the Speex decoder (#1347)
  * ogg123: fixed CPU issue when outputting to a closed pipe (#1357)
  * ogg123: return value to stop decoding after buffer is shut down (#1357)
- * ogg123: support for ReplayGain (#381)
+ * ogg123: support for ReplayGain; requires libvorbis 1.2.1 or later (#381)
  * oggdec: gettextized help text (#1385)
  * oggdec: gettextized all strings
  * oggdec: call ov_open_callbacks instead of ov_open; it works on Windows now
@@ -25,6 +25,7 @@ vorbis-tools 1.3.0 -- Unreleased
  * oggenc: --utf8 command similar to vorbiscomment's --raw (#268)
  * oggenc: fixed the encoding of extended characters in Windows (#268)
  * oggenc: validate raw UTF-8 sent to oggenc (#268)
+ * oggenc: include the PID in the RNG seed to get a unique serial (#1432)
  * ogginfo: support for information in Kate streams (#1360)
  * vcut: 64 bit fixes (#1366)
  * vorbiscomment: correct memory allocation (#472)
